[gd_scene load_steps=17 format=2]

[ext_resource path="res://stages/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/patiponpas.png" type="Texture" id=2]
[ext_resource path="res://sfx/TELADEINICIO.mp3" type="AudioStream" id=3]
[ext_resource path="res://stages/StartButton.gd" type="Script" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://fonts/m5x7.ttf"

[sub_resource type="DynamicFont" id=12]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 11 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = 35.0
margin_right = 64.0
margin_bottom = 103.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 127.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "Começar"
script = ExtResource( 4 )

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 127.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 4 )
text = "Como Jogar"

[node name="ScoreButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 54.0
margin_right = 127.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 6 )
text = "Pontos"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 127.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 8 )
text = "Sair"

[node name="Logo" type="Label" parent="."]
margin_left = 1.0
margin_top = 337.0
margin_right = 240.0
margin_bottom = 369.0
custom_fonts/font = SubResource( 10 )
text = "Kuartinho Studios© 2021."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBackground" type="Sprite" parent="."]
position = Vector2( 304, 99 )
texture = ExtResource( 2 )

[node name="RadioWaveTitle" type="Label" parent="."]
margin_left = 196.0
margin_top = 74.0
margin_right = 447.0
margin_bottom = 122.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 12 )
text = "RadioWave"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
